--- a/ProyectoAnime/pubspec.yaml
+++ b/ProyectoAnime/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.1
   built_value: ^7.1.0
   built_collection: ^4.3.2
+  link: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -54,6 +55,7 @@ flutter:
   assets:
     - assets/iconologo.png
     - assets/Saber.png
+    - assets/Kaguya.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
