--- a/ProyectoAnime/pubspec.yaml
+++ b/ProyectoAnime/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   built_value: ^7.1.0
   built_collection: ^4.3.2
   link: ^1.0.0
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
