--- a/ProyectoAnime/pubspec.yaml
+++ b/ProyectoAnime/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/Saber.png
     - assets/Kaguya.jpg
     - assets/FondoPersonaje.jpeg
+    - assets/FondoPersona.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
